# mogua-cocos-sdk

io/mogua/sdk/: MoguaCocosInstallCallback.java  MoguaCocosOpenCallback.java
mogua-cocos/: CMakeLists.txt  MoguaHelper.cpp  MoguaHelper.h
mogua-cocos/Android/: MoguaAndroidBridge.cpp  MoguaAndroidBridge.h
mogua-cocos/iOS/: MoguaCocos.h  MoguaCocos.mm  MoguaCocosCallback.h  MoguaCocosCallback.mm  MoguaIosBridge.cpp  MoguaIosBridge.h
